<resources>
    <string name="app_name">quick doctor</string>
    <string name="btn_cadastre">CADASTRE-SE</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="btn_home_sentindo">O QUE ESTÁ SENTINDO?</string>
    <string name="btn_home_noticias">NOTÍCIAS</string>
    <string name="btn_home_mensagens">MENSAGENS</string>
    <string name="btn_disconect">DESCONECTAR</string>
    <string name="hint_email">example@email.com</string>
    <string name="hint_senha">Senha:</string>
    <string name="hint_senhaNum">************</string>
    <string name="dados_nome">Nome completo:</string>
    <string name="dados_nomeNum">Fulano Beltrano Ciclano</string>
    <string name="dados_email">Email:</string>
    <string name="dados_endereco">Endereço:</string>
    <string name="dados_enderecoNum">Av. Lins de Vasconcelos, 1222</string>
    <string name="dados_tel">Telefone:</string>
    <string name="dados_telNum">(11) 91234–5678</string>
    <string name="dados_rg">RG:</string>
    <string name="dados_cpf">CPF:</string>
    <string name="dados_cpfNum">000.000.000-00</string>
    <string name="dados_idade">Idade:</string>
    <string name="dados_altura">Altura:</string>
    <string name="dados_peso">Peso:</string>
    <string name="dados_sangue">Sangue:</string>
    <string name="dados_sexo">Sexo:</string>
    <string name="dados_civil">Estado civil:</string>
    <string name="sub_cadastrar">Crie uma conta para começar a usar.</string>
    <string name="politica">Ao criar uma conta você concorda com os Termos de Serviço e com a Política de Privacidade</string>
    <string name="sub_entrar">Faça login para acessar sua conta.</string>
    <string name="esqueci">Esqueci minha senha.</string>
    <string name="home_perfil">Perfil</string>
    <string name="home_notify">Notificações</string>
    <string name="enviar_respostas">Enviar respostas</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="sub_agendar">Médicos que podem te ajudar:</string>
    <string name="sobre_doutor">Sobre o doutor:</string>
    <string name="sub_confirmar">Confirmar consulta</string>
    <string name="btn_editarPerfil">Editar perfil</string>
    <string name="batimento">Ritmo Cardíaco: </string>
    <string name="temp">Temperatura: </string>
    <string name="title_sentindo">Informe o grau dos seus sintomas para achar seu médico ideal!</string>
    <string name="med_sentindo">Ative seu bluetooth e conecte seu dispositivo para realizar as medições!</string>
    <string name="metal">Saúde Mental</string>
    <string name="gerais">Partes Gerais</string>
    <string name="cabeça">Cabeça</string>
    <string name="tronco">Tronco</string>
    <string name="inferiores">Membros Inferiores</string>
    <string name="superiores">Membros Superiores</string>
    <string name="btn_conecta">Conectar</string>
    <string name="btn_mede">Medir</string>
    <string name="btn_buscar">Buscar</string>
    <string name="alimentação">Alimentação</string>
    <string name="ambiente">Ambiente</string>
    <string name="comportamentos">Comportamentos</string>
    <string name="pensamentos">Pensamentos</string>
    <string name="sentimentos">Sentimentos</string>
    <string name="sono">Sono</string>
    <string name="aversao">Aversão a alimentos</string>
    <string name="compulsão">Compulsão alimentar</string>
    <string name="sede">Excesso de sede</string>
    <string name="fome">Fome frequente</string>
    <string name="injestão">Injestão de laxantes</string>
    <string name="perda">Perda de apetite</string>
    <string name="preocupação">Preocupação escessiva com o peso e dietas</string>
    <string name="tabagismo">Tabagismo</string>
    <string name="alcool">Uso excessivo de álcool</string>
    <string name="vomito">Vômito induzido</string>
    <string name="poluição">Poluição ambiental e sonora</string>
    <string name="acumulação">Acumulação compulsiva</string>
    <string name="automutilação">Automutilação</string>
    <string name="choro">Choro</string>
    <string name="desorganizado">Comportamento desorganizado</string>
    <string name="risco">Comportamentos de risco</string>
    <string name="ritualistico">Comportamentos ritualísticos</string>
    <string name="dificuldade_concentração">Dificuldade de concentração</string>
    <string name="atividades_diarias">Dificuldade em fazer atividades diárias</string>
    <string name="fala">Fala rápida e frenética</string>
    <string name="falta_concentração">Falta de concentração</string>
    <string name="falta_exercicio">Falta de exercício físico</string>
    <string name="falta_moderação">Falta de moderação</string>
    <string name="invenção">Invenção de coisas</string>
    <string name="isolamento">Isolamento social</string>
    <string name="lentidao">Lentidão durante atividades</string>
    <string name="repetitivo">Movimentos repetitivos</string>
    <string name="narcismo">Narcismo</string>
    <string name="obsessão">Obsessões sexuais</string>
    <string name="ranger">Ranger os dentes</string>
    <string name="repetição">Repetição persistente de palavras ou ações</string>
    <string name="repetição_sentido">Repetição sem sentido das próprias palavras</string>
    <string name="dissociativo">Transtorno dissociativo</string>
    <string name="vicio_comportamental">Vício comportamental</string>
    <string name="alucinação">Alucinações</string>
    <string name="auto_imagem">Auto-imagem distorcida</string>
    <string name="confusão">Confusão mental</string>
    <string name="crença_mental">Crença que um evento comum tem um significado especial e pessoal</string>
    <string name="crença_pensamentos">Crença que os pensamentos não são seus</string>
    <string name="delirio">Delírio</string>
    <string name="delirio_persecutorio">Delírio persecutório</string>
    <string name="delirio_religioso">Delírio religioso</string>
    <string name="esquecimento">Esquecimento</string>
    <string name="grandiosidade">Grandiosidade</string>
    <string name="ouvir_vozes">Ouvir vozes</string>
    <string name="acelerado">Pensamento acelerado</string>
    <string name="indesejados">Pensamentos indesejados</string>
    <string name="suicidas">Pensamentos suicidas</string>
    <string name="repetição_pensamentos">Repetição incessante de pensamentos</string>
    <string name="agitação">Agitação</string>
    <string name="agressão">Agressão</string>
    <string name="alteração_humor">Alteração do humor</string>
    <string name="ansiedade">Ansiedade</string>
    <string name="apatia">Apatia</string>
    <string name="apreensão">Apreensão</string>
    <string name="culpa">Culpa</string>
    <string name="depressão">Depressão</string>
    <string name="depressão_agitada">Depressão agitada</string>
    <string name="desanimo">Desânimo</string>
    <string name="descontentamento">Descontentamento geral</string>
    <string name="desesperança">Desesperança</string>
    <string name="desorientação">Desorientação</string>
    <string name="maniaco">Episódio maníaco</string>
    <string name="estresse">Estresse</string>
    <string name="euforia">Euforia</string>
    <string name="excesso_sexual">Excesso de desejo sexual</string>
    <string name="excitabilidade">Excitabilidade</string>
    <string name="superioridade">Falsa superioridade</string>
    <string name="hiperatividade">Hiperatividade</string>
    <string name="hostilidade">Hostilidade</string>
    <string name="impulsividade">Impulsividade</string>
    <string name="inquietação">Inquietação</string>
    <string name="insonia">Insônia</string>
    <string name="irritabilidade">Irritabilidade</string>
    <string name="mal_estar">Mal estar</string>
    <string name="medo">Medo</string>
    <string name="mudanças_humor">Mudanças de humor</string>
    <string name="nervosismo">Nervosismo</string>
    <string name="paranoia">Paranoia</string>
    <string name="perda_interesse">Perda de interesse</string>
    <string name="perda_prazer">Perda de prazer nas atividades</string>
    <string name="pessimismo">Pessimismo</string>
    <string name="psicose">Psicose</string>
    <string name="raiva">Raiva</string>
    <string name="resposta_emocional">Resposta emocional inadequada</string>
    <string name="tristeza">Tristeza</string>
    <string name="declinio">Declínio do sono</string>
    <string name="dificl_dormir">Dificuldade de adormecer</string>
    <string name="disturbios_sono">Distúrbios do sono</string>
    <string name="excesso_sono">Excesso de sonolência</string>
    <string name="noites_mal">Noites mal dormidas</string>
    <string name="pesadelos">Pesadelos</string>
    <string name="priva_sono">Privação do sono</string>
    <string name="corpo">Corpo</string>
    <string name="articulações">Articulações</string>
    <string name="musculos">Músculos</string>
    <string name="ossos">Ossos</string>
    <string name="pele">Pele</string>
    <string name="sangue">Sangue</string>
    <string name="unha">Unha</string>
    <string name="urina">Urina</string>
    <string name="via_nervosa">Via nervosa</string>
    <string name="ardor">Ardor no corpo</string>
    <string name="aumento_gordura">Aumento de gorduras pelo corpo</string>
    <string name="aumento_infecções">Aumento de infecções</string>
    <string name="aumento_peso">Aumento de peso</string>
    <string name="calafrios">Calafrios</string>
    <string name="cresce_lento">Crescimento e desenvolvimento lento em crianças</string>
    <string name="dificil_crescer">Dificuldade de crescimento</string>
    <string name="fadiga">Fadiga</string>
    <string name="febre">Febre</string>
    <string name="formigamento">Formigamento no corpo</string>
    <string name="fraqueza">Fraqueza pelo corpo</string>
    <string name="ganho_peso">Ganho de peso</string>
    <string name="inchaço">Inchaço no corpo</string>
    <string name="mal_estar_geral">Mal estar geral</string>
    <string name="perda_altura">Perda de altura</string>
    <string name="perda_peso">Perda de peso</string>
    <string name="perda_posição">Perda do sentido de posição</string>
    <string name="desmaio">Sensação de desmaio</string>
    <string name="queimação">Sensação de queimação pelo corpo</string>
    <string name="dor">Sensibilidade a dor pelo corpo</string>
    <string name="frio">Sensibilidade ao frio pelo corpo</string>
    <string name="sensibilidade">Sensibilidade pelo corpo</string>
    <string name="inchados">Tecidos inchados</string>
    <string name="temperatura_baixa">Temperatura baixa</string>
    <string name="crepitação">Crepitações das articulações</string>
    <string name="deformidade">Deformidade nas articulações</string>
    <string name="mobilidade_reduzida">Diminuição da mobilidade nas articulações</string>
    <string name="dor_articulações">Dor nas articulações</string>
    <string name="dor_forte">Dores fortes nas articulações</string>
    <string name="estalos">Estalos nas articulações</string>
    <string name="inchaço_articulações">Inchaço nas articulações</string>
    <string name="perda_flexibilidade">Perda de flexibilidade nas articulações</string>
    <string name="rangidos">Rangidos nas articulações</string>
    <string name="rigidez">Rigidez nas articulações</string>
    <string name="sensibilidade_articulações">Sensibilidade nas articulações</string>
    <string name="anomalias">Anomalias na locomoção</string>
    <string name="dor_tardia">Dor tardia nos músculos</string>
    <string name="dores_musculo">Dores nos músculos</string>
    <string name="espasmos">Espasmos musculares</string>
    <string name="fraqueza_musculos">Fraqueza nos músculos</string>
    <string name="lentidão_movimentos">Lentidão nos movimentos</string>
    <string name="ma_coordenação">Má coordenação motora</string>
    <string name="involutarios">Movimentos involuntários</string>
    <string name="paralisia">Paralisia</string>
    <string name="perda_massa">Perda de massa muscular</string>
</resources>