<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/antfy_background"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btMensagens"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/ic_rounded_button_white"
        android:backgroundTint="@color/white"
        android:text="@string/btn_home_mensagens"
        android:textColor="@color/antfy_primary"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:layout_constraintBottom_toTopOf="@+id/btNoticias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSentindo"
        app:strokeColor="@color/antfy_primary"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btNoticias"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/ic_rounded_button_white"
        android:backgroundTint="@color/white"
        android:text="@string/btn_home_noticias"
        android:textColor="@color/antfy_primary"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMensagens"
        app:strokeColor="@color/antfy_primary"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle_blue" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="5dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/divisor_darkest_blue" />

    <ImageView
        android:id="@+id/btNotify"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_baseline_notification_important_24" />

    <ImageView
        android:id="@+id/btPerfil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <Button
        android:id="@+id/btSentindo"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/ic_rounded_button_blue"
        android:text="@string/btn_home_sentindo"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:layout_constraintBottom_toTopOf="@+id/btMensagens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>